# pico-apsolute-mouse

./: CMakeLists.txt  PIN_VE_KLAVYE_KARSILIKLARI.txt  README_TR.md  build_uf2_windows.bat  pico_sdk_import.cmake
.github/workflows/: main.yml
docs/: KULLANIM_NOTU.md  OLMASI_VE_OLMAMASI_GEREKENLER.md  PIN_VE_KLAVYE_TABLOSU.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/src/: main.c  usb_descriptors.c  usb_descriptors.h
pc_app/: gt_arcade_calibration_v3.py  gt_arcade_calibration_v32.py  gt_arcade_kontrol_io_v001.py
src/: calibration.c  calibration.h  main.c  pins.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
tools/: BASLANGICA_EKLE.bat  MASAUSTU_PROGRAMI_BASLAT.bat  PYTHON_MODUL_KUR.bat
